# fantacom

./: .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
bootrom/: CMakeLists.txt  Makefile  binutils-z80.cmake  crt0.asm  link.ld
bootrom/src/: console.c  crt0.asm  debug.c  disk.c  display.c  interrupts.c  ivt.asm  keyboard.c  main.c  main.s  meminfo.c  memory.c  reset.s  rt0.s  simplefs.c  startup.s  z80io.c
bootrom/src/include/: debug.h  disk.h  display.h  ivt.h  keyboard.h  meminfo.h  memory.h  simplefs.h  z80io.h
docs/: MMU.md  README.md
include/: board.hpp  bus.hpp  cp437.hpp  font.hpp  globals.hpp  ici_device.hpp  io_device.hpp  machine.hpp  mmu_controller.hpp  unifont.hpp  z80.hpp
include/ici_devices/: graphics.hpp
include/io_devices/: debug.hpp  disk_ctrl.hpp  disp_kb_controller.hpp  graphics.hpp  ici.hpp  keyboard.hpp  mmu.hpp
src/: board.cpp  bus.cpp  cp437.cpp  font.cpp  globals.cpp  machine.cpp  main.cpp  mmu_controller.cpp  unifont.cpp  z80.cpp
src/ici_devices/: graphics.cpp
src/io_devices/: debug.cpp  disk_ctrl.cpp  disp_kb_controller.cpp  graphics.cpp  ici.cpp  keyboard.cpp  mmu.cpp  mmu_controller.cpp
tools/: genfont.py
z80core/: CMakeLists.txt  README.md
z80core/include/: z80.hpp
z80core/src/: z80.cpp
